# RodeoKit

./: .gitignore  .gitmodules  .vimrc  CMakeLists.txt  Doxyfile  Readme.md  StyleGuide.md  build  buildShaders.mk  build_shaders  configure  configure_web  run  scan.rb
.github/workflows/: send_autobuild_webdocs_ping.yml
include/: compile_flags.txt  rodeo.h  rodeo_config.h  rodeo_math.h  rodeo_types.h
include/rodeo/: audio.h  audio_t.h  collision.h  collision_t.h  common.h  gfx.h  gfx_t.h  input.h  input_t.h  log.h  log_t.h  math.h  math_t.h  rmlui.h  rmlui_t.h  window.h
include/rodeo/math/: mat4.h  mat4_t.h  rng.h  rng_t.h  vec2.h  vec2_t.h  vec3.h  vec3_t.h
src/: .clangd  compile_flags.txt  main.c  rodeo.c  rodeo_error.c  rodeo_input.c  rodeo_internal.h  rodeo_internal_types.h  rodeo_log.c  rodeo_math.c  rodeo_string.c  rodeo_types.c
src/audio/: irodeo_audio_t.h  rodeo_audio.c  rodeo_audio_t.h
src/collision/: rodeo_collision.c
src/gfx/: irodeo_gfx.h  irodeo_gfx_t.h  rodeo_gfx.c
src/input/: irodeo_input.h  irodeo_input_t.h  rodeo_input.c
src/lib/: lib.h
src/log/: irodeo_log.h  rodeo_log.c
src/math/: irodeo_mat4.h  irodeo_math.h  irodeo_rng_t.h  irodeo_vec2.h  irodeo_vec3.h  rodeo_mat4.c  rodeo_math.c  rodeo_rng.c  rodeo_vec2.c  rodeo_vec3.c
src/private/: rodeo_error.h  rodeo_internal.h  rodeo_internal_types.h
src/rmlui/: irodeo_rmlui.hpp  irodeo_rmlui_t.h  irodeo_rmlui_t.hpp  rodeo_rmlui.cpp
src/shaders/: simple.fragment.sc  simple.vertex.sc  varying.def.sc
src/window/: irodeo_window.h  irodeo_window_t.h  rodeo_window.c
